refactor: update repository references from gp201 to andersen-lab in configuration files

--- a/nextflow.config
+++ b/nextflow.config
@@ -1,6 +1,6 @@
 /*
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
-    gp201/barcodeforge Nextflow config file
+    andersen-lab/barcodeforge Nextflow config file
 ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
     Default config options for all compute environments
 ----------------------------------------------------------------------------------------
@@ -167,20 +167,28 @@ dag {
 }
 
 manifest {
-    name            = 'gp201/barcodeforge'
+    name            = 'andersen-lab/barcodeforge'
     author          = """Praneeth""" // The author field is deprecated from Nextflow version 24.10.0, use contributors instead
     contributors    = [
         // TODO nf-core: Update the field with the details of the contributors to your pipeline. New with Nextflow version 24.10.0
         [
-            name: 'Praneeth',
+            name: 'Praneeth G',
             affiliation: '',
             email: '',
-            github: '',
+            github: 'https://github.com/gp201',
+            contribution: [], // List of contribution types ('author', 'maintainer' or 'contributor')
+            orcid: ''
+        ],
+        [
+            name: 'Joshua Levy',
+            affiliation: '',
+            email: '',
+            github: 'https://github.com/joshuailevy',
             contribution: [], // List of contribution types ('author', 'maintainer' or 'contributor')
             orcid: ''
         ],
     ]
-    homePage        = 'https://github.com/gp201/barcodeforge'
+    homePage        = 'https://github.com/andersen-lab/barcodeforge'
     description     = """This pipeline enables the generation of barcodes for use with the Freyja."""
     mainScript      = 'main.nf'
     defaultBranch   = 'master'
