--- a/conf/test.config
+++ b/conf/test.config
@@ -5,7 +5,7 @@
     Defines input files and everything required to run a fast and simple pipeline test.
 
     Use as follows:
-        nextflow run gp201/barcodeforge -profile test,<docker/singularity> --outdir <OUTDIR>
+        nextflow run andersen-lab/barcodeforge -profile test,<docker/singularity> --outdir <OUTDIR>
 
 ----------------------------------------------------------------------------------------
 */
