refactor: add matUtils_overlap parameter to configuration and workflows

--- a/nextflow.config
+++ b/nextflow.config
@@ -19,6 +19,7 @@ params {
 
     lineages                    = null
     barcode_prefix              = 'pathogen'
+    matUtils_overlap            = 0
 
     // Boilerplate options
     outdir                       = "results"
