Some smaller suggestions (#4)
- Ran [`nextflow
lint`](https://www.nextflow.io/docs/latest/reference/cli.html#lint)
- Added `--help` command 
> `nextflow run andersen-lab/BarcodeForge --help`
- Added file checking logic for creation of nextflow channels
- Added missing dependency of `environment.yml` file when running
``nextflow run andersen-lab/BarcodeForge -profile docker,wave ...`


Other then that I think it would be good to have the `.nf-core.yml in
there` so you can use `nf-core modules update <tool-name>`.

Think also a good alternative solution to the `--set-overlap 0.8` is to
do something like this, so that in the params file, you can also tweak
that.
`nextflow.config`: 
```nextflow file=nextflow.config
matutils_annotate_arguments = '--set-overlap 0.8' 
```
`modules.config`
```nextflow file=modules.config
withName: 'MATUTILS_ANNOTATE' {
        ext.args = "${params.matutils_annotate_arguments}"
```

---------

Co-authored-by: Praneeth <praneethg2001@gmail.com>

--- a/conf/modules.config
+++ b/conf/modules.config
@@ -16,7 +16,7 @@ process {
         mode: params.publish_dir_mode,
         saveAs: { filename -> filename.equals('versions.yml') ? null : filename }
     ]
-    
+
     withName: 'MINIMAP2_ALIGN' {
         cpus = { check_max( 5 * task.attempt, 'cpus' ) }
         publishDir = [
@@ -46,6 +46,7 @@ process {
 
     withName: 'MATUTILS_ANNOTATE' {
         cpus = { check_max( 5 * task.attempt, 'cpus' ) }
+       // ext.args = '--set-overlap 0'
         publishDir = [
             path: { "${params.outdir}/matutils_annotate" },
             mode: params.publish_dir_mode,
@@ -73,7 +74,6 @@ process {
 
     withName: 'GENERATE_BARCODES' {
         cpus = { check_max( 5 * task.attempt, 'cpus' ) }
-        ext.args = '--set-overlap 1.0'
         publishDir = [
             path: { "${params.outdir}/barcode" },
             mode: params.publish_dir_mode,
