--- a/nextflow.config
+++ b/nextflow.config
@@ -25,6 +25,8 @@ params {
     outdir                       = "results"
     publish_dir_mode             = 'copy'
     validate_params              = true
+    help                         = false
+    help_full                    = false
     version                      = false
     trace_report_suffix          = new java.util.Date().format( 'yyyy-MM-dd_HH-mm-ss')// Config options
     max_cpus                     = 16
@@ -199,7 +201,33 @@ manifest {
 }
 
 plugins {
-    id 'nf-schema@2.1.1' // Validation of pipeline parameters
+    id 'nf-schema@2.3.0' // Validation of pipeline parameters
+}
+
+validation {
+    monochromeLogs         = false
+    help.showHidden        = false
+    lentientMode           = false
+    failUnrecognisedParams = false
+    ignoreParamsFile       = []
+    defaultIgnoreParams    = []
+    help {
+        enabled = true
+        command = "nextflow run $manifest.name -profile <conda/mamba> -params-file <PARAMS.json> --outdir <OUTDIR>"
+        fullParameter = "help_full"
+        showHiddenParameter = "show_hidden"
+        beforeText = """
+-\033[2m----------------------------------------------------\033[0m-
+\033[0;35m  ${manifest.name} ${manifest.version}\033[0m
+-\033[2m----------------------------------------------------\033[0m-
+"""
+        afterText = """${manifest.doi ? "* The pipeline\n" : ""}${manifest.doi.tokenize(",").collect { "  https://doi.org/${it.trim().replace('https://doi.org/','')}"}.join("\n")}${manifest.doi ? "\n" : ""}
+"""
+    }
+    summary {
+        beforeText = validation.help.beforeText
+        afterText = validation.help.afterText
+    }
 }
 
 // Load modules.config for DSL2 module specific options
