--- a/conf/test.config
+++ b/conf/test.config
@@ -14,7 +14,7 @@ process {
     resourceLimits = [
         cpus: 4,
         memory: '15.GB',
-        time: '1.h'
+        time: '1.h',
     ]
 }
 
@@ -25,7 +25,6 @@ params {
     // Input data
     // TODO nf-core: Specify the paths to your test data on nf-core/test-datasets
     // TODO nf-core: Give any required params for the test so that command line flags are not needed
-    fasta = "${projectDir}/assets/test/input/sra/input.tsv"
-    is_aligned = false
-    
+    fasta                      = "${projectDir}/assets/test/input/sra/input.tsv"
+    is_aligned                 = false
 }
