--- a/modules/local/format_tree/environment.yml
+++ b/modules/local/format_tree/environment.yml
@@ -2,8 +2,10 @@ name: format_nwk_tree
 channels:
   - conda-forge
   - bioconda
+  - anaconda
 dependencies:
   - python=3.11.4
+  - git==2.45.2
   - pip:
     - ete3==3.1.3
     - git+https://github.com/jeetsukumaran/DendroPy.git@26c3bfba473ddee5db2856c79b7f22702ce903e1#egg=DendroPy
