--- a/.github/workflows/python-test.yml
+++ b/.github/workflows/python-test.yml
@@ -7,7 +7,13 @@ on:
     
 jobs:
   testsuite:
-    runs-on: ubuntu-latest
+    name: Test Package (Python ${{ matrix.python-version }} | ${{ matrix.os }})
+    runs-on: ${{ matrix.os }}
+    strategy:
+      fail-fast: false
+      matrix:
+        os: [ubuntu-latest]
+        python-version: ["3.8", "3.9", "3.10", "3.11", "3.12"]
       
     steps:
       # Downloads a copy of the code in your repository before running CI tests
@@ -20,7 +26,7 @@ jobs:
           auto-update-conda: true
           channels: bioconda,conda-forge
           channel-priority: true
-          python-version: '3.10'
+          python-version: ${{ matrix.python-version }}
           activate-environment: test
       
       - name: Install
