--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,7 +14,8 @@ dependencies = [
     "numpy>=1.20.0",
     "pandas>=1.3.0",
     "biopython>=1.78",
-    "altair>=5.0.0",
+    "seaborn>=0.13.2",
+    "matplotlib>=3.10.3",
     "nextstrain-augur>=31.1.0",
 ]
 
