--- a/pyproject.toml
+++ b/pyproject.toml
@@ -37,7 +37,9 @@ requires = ["setuptools"]
 build-backend = "setuptools.build_meta"
 
 [tool.setuptools.packages.find]
-where = ["barcodeforge"]
+where = ["."]
+include = ["barcodeforge*"]
+exclude = ["tests*"]
 
 [project.scripts]
 barcodeforge = "barcodeforge.cli:cli"
